<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <DUT Name="DUT_SimMotor" Id="{19a4e943-c883-447e-9e05-f3e3ca4d29c1}">
    <Declaration><![CDATA[TYPE DUT_SimMotor :
STRUCT
	bAllForwardEnable	:	BOOL;
	bAllBackwardEnable	:	BOOL;
	bAllEnable			:	BOOL;
	fPosition			:	LREAL;
	fVelocity			:	LREAL;
	fAcceleration		:	LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>