<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <DUT Name="DUT_SimMotorStates" Id="{6a981ff5-0d13-4f8b-97d8-6e15ecc8935f}">
    <Declaration><![CDATA[TYPE DUT_SimMotorStates :
(
	IDLE := 0, 
	CHECK,
	MOVING
);
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>